@@ -4,7 +4,7 @@
 
     <groupId>org.seanjohnson</groupId>
     <artifactId>textfighter</artifactId>
-    <version>1.3.2</version>
+    <version>1.3.3</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
