@@ -152,13 +152,13 @@ public class Tool extends Item {
     /**
      * Increases the value of {@link #durability}.
      * <p>If the weapon is {@link #unbreakable} then nothing happens. If the new value is less than 1, then it breaks.</p>
-     * @param a     The new value.
+     * @param a     The amount increased.
      */
     public void increaseDurability(int a) { if(unbreakable) { return; } durability+=a; if(durability < 1) { durability = 0; broken(); } if(durability > maxDurability) { durability = maxDurability; }  }
     /**
      * Decrease the value of {@link #durability}.
      * <p>If the weapon is {@link #unbreakable} then nothing happens. If the new value is less than 1, then it breaks.</p>
-     * @param a     The new value.
+     * @param a     The amount decreased.
      */
     public void decreaseDurability(int a) { if(unbreakable) { return; } durability-=a; if(durability < 1) { durability = 0; broken(); } if(durability > maxDurability) { durability = maxDurability; }  }
     /**
